# quartermaster

./: COPYING  Cargo.toml  Dockerfile  README.md  config.toml  todo.txt
examples/: config.toml
proptest-regressions/: main.txt
src/: auth.rs  config.rs  crate_name.rs  error.rs  feature_name.rs  index.rs  main.rs  storage.rs
src/auth/: auto_token.rs  token.rs  token_file.rs  token_list.rs
src/crate_name/: forbidden.rs
src/storage/: local.rs  s3.rs
