[package]
name = "quartermaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["json"] }
axum-extra = { version = "0.9.0", features = ["typed-routing", "typed-header"] }
config = "0.13.4"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
simple-eyre = "0.3.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }

# TODO: Once reqwest 0.12 (using hyper 1.0) releases, poke rust-s3 to also update so we only have hyper 1.0 in the dependency tree
rust-s3 = { version = "0.33.0", optional = true }
hyper-staticfile = "0.10.0"

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.4.0"


[features]
default = []

s3 = ["dep:rust-s3"]
