[package]
name = "quartermaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["json"] }
axum-extra = { version = "0.9.0", features = ["typed-routing", "typed-header"] }
config = "0.13.4"
futures = "0.3.29"
http-body-util = "0.1.0"
relative-path = "1.9.0"
rust-s3 = "0.33.0"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
simple-eyre = "0.3.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.4.0"

[features]
default = ["s3"]

s3 = []
