[package]
name = "quartermaster"
version = "0.2.0"
edition = "2021"
description = "A dead-simple alternate registry suitable for private registries"
license = "GPL-3.0"
repository = "https://github.com/Palladinium/quartermaster"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cargo", "registry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["json"] }
axum-extra = { version = "0.9.0", features = ["typed-routing"] }
bytesize = { version = "1.3.0", features = ["serde"] }
config = "0.13.4"
futures = "0.3.29"
hex = { version = "0.4.3", features = ["serde"] }
http-body-util = "0.1.0"
relative-path = "1.9.0"
rust-s3 = "0.33.0"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_path_to_error = "0.1.14"
sha2 = "0.10.8"
stable-eyre = "0.2.2"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.4.0"

[features]
default = ["s3"]

s3 = []
